--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,28 +1,9 @@
 ---
 import App from '../components/App'
+import BaseLayout from '../layouts/BaseLayout.astro'
 ---
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <title>Voxel-ish</title>
-    <style>
-      html,
-      body {
-        margin: 0;
-        padding: 0;
-      }
+<BaseLayout>
+   <App client:load />
+</BaseLayout>
 
-      body {
-        width: 100%;
-        height: 100vh;
-      }
-    </style>
-  </head>
-  <body>
-    <App client:load />
-  </body>
-</html>
